apps/paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      enableServiceLinks: false
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
              subPath: data
            - name: data
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: data
              mountPath: /usr/src/paperless/export
              subPath: export
            - name: data
              mountPath: /usr/src/paperless/consume
              subPath: consume
          resources:
            limits:
              memory: 1Gi
              cpu: "2"
            requests:
              memory: 256Mi
              cpu: "10m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETGID
                - SETUID
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
