apps/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: paperless.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: paperless
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - paperless.sanxer.dk
      secretName: paperless-tls
